--- a/resume.tex
+++ b/resume.tex
@@ -31,7 +31,8 @@
 Chennai, India 600048\\
 Phone No.: \href{tel:+91 7904860756}{+91 7904860756}\\
 Email: \href{mailto:gutgutia159@gmail.com}{gutgutia159@gmail.com}\\
-Linkedin: \href{https://www.linkedin.com/in/shivamgutgutia}{linkedin.com/in/shivamgutgutia}
+Linkedin: \href{https://www.linkedin.com/in/shivamgutgutia}{linkedin.com/in/shivamgutgutia}\\
+GitHub: \href{https://github.com/shivamgutgutia}{https://github.com/shivamgutgutia}
 \end{center}
 
 \vspace{10pt}
