Added coursework to resume

--- a/resume.tex
+++ b/resume.tex
@@ -105,6 +105,7 @@ January 2023 - February 2023
 September 2021 - Current
 \begin{itemize}
     \item CGPA: 9.62
+    \item Course Work: Data Structures and Algorithms, Database Systems, Operating Systems, Computer Network, Computer Architecture and Organization
 \end{itemize}
 
 \subsection*{\large\textbf{Higher Education - Computer Science}}
@@ -112,6 +113,7 @@ September 2021 - Current
 June 2019 - May 2020
 \begin{itemize}
     \item GPA: 95.4\%.
+    \item Course Work: Maths, Python, SQL
 \end{itemize}
 
 \subsection*{\large\textbf{Secondary Education - Computer Science}}
@@ -119,18 +121,7 @@ June 2019 - May 2020
 June 2017 - May 2018
 \begin{itemize}
     \item GPA: 95.8\%.
-\end{itemize}
-
-\vspace{10pt}
-
-\section*{Languages}
-\begin{itemize}
-    \item Python: Advanced
-    \item C/CPP: Upper intermediate
-    \item Java: Intermediate
-    \item SQL: Intermediate
-    \item HTML/CSS: Elementary
-    \item Javascript: Intermediate
+    \item Course Work: HTML/CSS, QBasic
 \end{itemize}
 
 \vspace{10pt}
