Added project section to resume

--- a/resume.tex
+++ b/resume.tex
@@ -6,6 +6,7 @@
 \usepackage{xcolor}
 \usepackage{tabularx}
 \usepackage{makecell}
+\usepackage{fontawesome5}
 \usepackage{array}
 
 % Define custom colors
@@ -37,8 +38,8 @@
     \end{minipage}%
     \begin{minipage}{0.5\textwidth}
         \begin{center}
-        Linkedin: \href{https://www.linkedin.com/in/shivamgutgutia}{https://linkedin.com/in/shivamgutgutia} \\
-        GitHub: \href{https://github.com/shivamgutgutia}{https://github.com/shivamgutgutia}
+        Linkedin: \href{https://www.linkedin.com/in/shivamgutgutia}{\textcolor{blue!80!white}{https://linkedin.com/in/shivamgutgutia} {\faHandPointLeft}} \\
+        GitHub: \href{https://github.com/shivamgutgutia}{\textcolor{blue!80!white}{https://github.com/shivamgutgutia} {\faHandPointLeft}}
         \end{center}
     \end{minipage}
 \end{center}
@@ -58,47 +59,53 @@ Programming Languages & & Java, JavaScript & C/C++, Python \\
 \hline
 Machine Learning and Data Science & Keras & Numpy, Scikit-Learn, Pandas, Matplotlib &  \\
 \hline
-Web Development & FlaskAPI, TypeScript & Node, Express & \\
+Web Development & TypeScript & Flask, Node, Express & \\
 \hline
 Database Management & MongoDB & MySQL, Sqlite3, PostgreSQL & \\
 \hline
-DevOps and Version Control & Git, Docker & & \\
+DevOps and Version Control & Docker & Git, GitHub & \\
 \hline
 \end{tabular*}
 \end{center}
 
 \section*{Work History}
-\subsection*{\large\textbf{Analytics Intern}}
-\textit{CES IT Pvt Ltd - Chennai, India} \\
-August 2023 - Current
-\begin{itemize}
-    \item Studied new technologies to support machine learning applications.
-    \item Designed, implemented, and evaluated new models and rapid software prototypes to solve problems in machine learning and systems engineering.
+
+\subsection*{\large\textbf{Analytics Intern}} \textit{CES IT Pvt Ltd - Chennai, India} \hfill August 2023 - Current
+\begin{itemize}[leftmargin=*,topsep=0pt]
+    \item Studied new technologies for machine learning applications.
+    \item Designed, implemented, and evaluated rapid prototypes solving problems in ML and systems engineering.
 \end{itemize}
 
 \section*{Education}
-\subsection*{\large\textbf{B.Tech in Computer Science Engineering}}
-\textit{Vellore Institute of Technology, Vellore, Tamil Nadu} \\
-September 2021 - Current
+
 \begin{itemize}
+\item
+\subsection*{\large\textbf{B.Tech in Computer Science Engineering}}
+\textit{Vellore Institute of Technology, Vellore, Tamil Nadu} \hfill September 2021 - Current
+\begin{itemize}[label=\textasteriskcentered , leftmargin=*,topsep=0pt]
     \item CGPA: 9.62
     \item Course Work: Data Structures and Algorithms, Database Systems, Operating Systems, Computer Network, Computer Architecture and Organization
 \end{itemize}
+\end{itemize}
 
-\subsection*{\large\textbf{Higher Education - Computer Science}}
-\textit{Modern Senior Secondary School, Chennai, Tamil Nadu} \\
-June 2019 - May 2020
 \begin{itemize}
+\item
+\subsection*{\large\textbf{Higher Education - Computer Science}}
+\textit{Modern Senior Secondary School, Chennai, Tamil Nadu} \hfill June 2019 - May 2020
+\begin{itemize}[label=\textasteriskcentered , leftmargin=*,topsep=0pt]
     \item GPA: 95.4\%
     \item Course Work: Maths, Python, SQL
 \end{itemize}
+\end{itemize}
 
-\subsection*{\large\textbf{Secondary Education - Computer Science}}
-\textit{Modern Senior Secondary School, Chennai, Tamil Nadu} \\
-June 2017 - May 2018
 \begin{itemize}
+\item
+\subsection*{\large\textbf{Secondary Education - Computer Science}}
+\textit{Modern Senior Secondary School, Chennai, Tamil Nadu} \hfill June 2017 - May 2018
+\begin{itemize}[label=\textasteriskcentered , leftmargin=*,topsep=0pt]
     \item GPA: 95.8\%
     \item Course Work: HTML/CSS, QBasic
+\end{itemize}
 \end{itemize}
 
 \section*{Affiliations}
@@ -107,10 +114,22 @@ June 2017 - May 2018
     \item Core member of Ayuda-NGO
 \end{itemize}
 
+\section*{Projects}
+
+\begin{itemize}
+\item 
+\subsection*{\large\textbf{Contacts Generator - Backend}}
+\begin{itemize}[label=\textasteriskcentered , leftmargin=*,topsep=0pt]
+    \item \textbf{\textit{Description:}} The Contact File Backend Service seamlessly uploads, processes CSV, XLSX, or XLS contact data, extracting details to compile a unified VCF file compatible with Android and iOS, simplifying cross-platform contact management.
+    \item \textbf{\textit{Tools Used:}} Python, Flask, V-Object, Pandas, Docker, Google Cloud Run
+    \item \textbf{\textit{GitHub Repo:} }\href{https://github.com/shivamgutgutia/contactsGeneratorBackend}{\textcolor{blue!80!white}{https://github.com/shivamgutgutia/contactsGeneratorBackend} {\faHandPointLeft}}
+\end{itemize}
+\end{itemize}
+
 \section*{Certifications}
 \begin{itemize}
     \item Programming Foundations with JavaScript, HTML and CSS by Duke University - 
-    \href{https://coursera.org/verify/ZZVTGPTSR36H}{\textcolor{blue}{Verify here}}
+    \href{https://coursera.org/verify/ZZVTGPTSR36H}{\textcolor{blue!80!white}{Verify here}} {\faHandPointLeft}
 \end{itemize}
 
 \end{document}
