--- a/resume.tex
+++ b/resume.tex
@@ -1,135 +1,184 @@
-\documentclass[a4paper,10pt]{article}
-\usepackage[left=0.2in,right=0.2in,top=0.2in,bottom=0.2in]{geometry}
-\usepackage{enumitem}
-\usepackage{titlesec}
-\usepackage[hidelinks]{hyperref}
-\usepackage{xcolor}
-\usepackage{tabularx}
-\usepackage{makecell}
-\usepackage{fontawesome5}
-\usepackage{array}
+\documentclass[9pt]{developercv}
+\usepackage{multicol}
+\setlength{\columnsep}{0mm}
+\usepackage{lipsum}  
 
-% Define custom colors
-\definecolor{darkblack}{RGB}{0,0,0}
-\definecolor{gray}{RGB}{128,128,128}
-
-% Adjust section formatting
-\titleformat{\section}{\large\bfseries\color{darkblack}}{}{0em}{}[\titlerule]
-\titlespacing{\section}{0pt}{2ex plus 0.5ex minus 0.2ex}{1ex plus 0.2ex} % Increase spacing here
-
-% Customize itemize bullets
-\setlist[itemize]{label=\textbullet, left=0.5em, topsep=0.5em, itemsep=0.2em, parsep=0em}
-
-% Increase font size for job headings
-\titleformat{\subsection}{\large\bfseries\color{darkblack}}{}{0em}{}
 
 \begin{document}
 
-\begin{center}
-    {\Huge\textbf{SHIVAM GUTGUTIA}}\\ % Larger font size for your name
-    \vspace{15pt}
-    \noindent
-    \begin{minipage}{0.5\textwidth}
-        \begin{center}
-        Chennai, India 600048 \\
-        Phone No.: \href{tel:+91 7904860756}{+91 7904860756} \\
-        Email: \href{mailto:shivamgutgutia159@gmail.com}{shivamgutgutia159@gmail.com}
-        \end{center}
-    \end{minipage}%
-    \begin{minipage}{0.5\textwidth}
-        \begin{center}
-        Linkedin: \href{https://www.linkedin.com/in/shivamgutgutia}{\textcolor{blue!80!white}{https://linkedin.com/in/shivamgutgutia} {\faHandPointLeft}} \\
-        GitHub: \href{https://github.com/shivamgutgutia}{\textcolor{blue!80!white}{https://github.com/shivamgutgutia} {\faHandPointLeft}}
-        \end{center}
-    \end{minipage}
-\end{center}
+%----------------------------------------------------------------------------------------
+%	TITLE AND CONTACT INFORMATION
+%----------------------------------------------------------------------------------------
+
+\begin{minipage}[t]{0.5\textwidth} 
+	\vspace{-\baselineskip}
+	
+	{ \fontsize{16}{20} \textcolor{black}{\textbf{\MakeUppercase{Shivam Gutgutia}}}}
+	
+	\vspace{6pt}
+	
+	{\Large Developer $\sim$ Computer Science Engineer}
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.2\textwidth}
+	\vspace{-\baselineskip}
+	\icon{Globe}{11}{\href{https://shivamgutgutia.github.io/resume/}{Resume Link}}\\ 
+    \icon{Phone}{11}{7904860756}\\
+    \icon{MapMarker}{11}{Chennai, India}\\
+	
+\end{minipage}
+\begin{minipage}[t]{0.27\textwidth}
+	\vspace{-\baselineskip}
+	
+	\icon{Envelope}{11}{\href{mailto:shivamgutgutia159@gmail.com}{shivamgutgutia159@gmail.com}}\\	
+    \icon{Github}{11}{\href{https://github.com/shivamgutgutia}{/shivamgutgutia}}\\
+    \icon{LinkedinSquare}{11}{\href{https://www.linkedin.com/in/shivamgutgutia/}{/in/shivamgutgutia}}\\    
+    
+\end{minipage}
 
 
-\section*{Professional Summary}
-Passionate and dedicated student with a robust skill set encompassing programming, algorithms, data structures, and proficiency in multiple programming languages. Additionally, equipped with strong management skills, eager to contribute expertise in computer science to innovative projects while effectively leading and coordinating teams when necessary.
+%----------------------------------------------------------------------------------------
+%	SKILLS
+%----------------------------------------------------------------------------------------
 
-\section*{Skills}
-\begin{center}
-\renewcommand{\arraystretch}{1.5}
-\begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}|c|c|c|c|}
-\hline
-\textbf{Skill Category} & \textbf{Beginner} & \textbf{Intermediate} & \textbf{Advanced} \\
-\hline
-Programming Languages & & Java, JavaScript & C/C++, Python \\
-\hline
-Machine Learning and Data Science & Keras & Numpy, Scikit-Learn, Pandas, Matplotlib &  \\
-\hline
-Web Development & TypeScript & Flask, Node, Express & \\
-\hline
-Database Management & MongoDB & MySQL, Sqlite3, PostgreSQL & \\
-\hline
-DevOps and Version Control & Docker & Git, GitHub & \\
-\hline
-\end{tabular*}
-\end{center}
+\cvsect{Summary}
+\vspace{-6pt}
 
-\section*{Work History}
+\hfill
+I'm currently a 3rd-year Computer Science student at Vellore Institute of Technology. I really enjoy working with Python and JavaScript, especially when it comes to Backend and machine learning. Being the Chairperson of CodeChef-VIT, I've learned a lot about working in teams and leading them.\\
 
-\subsection*{\large\textbf{Analytics Intern}} \textit{CES IT Pvt Ltd - Chennai, India} \hfill August 2023 - Current
-\begin{itemize}[leftmargin=*,topsep=0pt]
-    \item Studied new technologies for machine learning applications.
-    \item Designed, implemented, and evaluated rapid prototypes solving problems in ML and systems engineering.
-\end{itemize}
+I'm truly passionate about technology. I'm pretty good at Python, JavaScript, competitive programming, and DevOps. I'm always eager to learn more and improve myself, looking for chances to grow and make a positive impact in the tech field.
 
-\section*{Education}
 
-\begin{itemize}
-\item
-\subsection*{\large\textbf{B.Tech in Computer Science Engineering}}
-\textit{Vellore Institute of Technology, Vellore, Tamil Nadu} \hfill September 2021 - Current
-\begin{itemize}[label=\textasteriskcentered , leftmargin=*,topsep=0pt]
-    \item CGPA: 9.62
-    \item Course Work: Data Structures and Algorithms, Database Systems, Operating Systems, Computer Network, Computer Architecture and Organization
-\end{itemize}
-\end{itemize}
+\cvsect{Skills}
+\vspace{-6pt}
 
-\begin{itemize}
-\item
-\subsection*{\large\textbf{Higher Education - Computer Science}}
-\textit{Modern Senior Secondary School, Chennai, Tamil Nadu} \hfill June 2019 - May 2020
-\begin{itemize}[label=\textasteriskcentered , leftmargin=*,topsep=0pt]
-    \item GPA: 95.4\%
-    \item Course Work: Maths, Python, SQL
-\end{itemize}
-\end{itemize}
+\begin{minipage}[t]{0.2\textwidth}
+    \textbf{Languages:}
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.73\textwidth}
+  \textbf{C/C++, Python}, Java, SQL, JavaScript  
+\end{minipage}
+\vspace{4mm}
 
-\begin{itemize}
-\item
-\subsection*{\large\textbf{Secondary Education - Computer Science}}
-\textit{Modern Senior Secondary School, Chennai, Tamil Nadu} \hfill June 2017 - May 2018
-\begin{itemize}[label=\textasteriskcentered , leftmargin=*,topsep=0pt]
-    \item GPA: 95.8\%
-    \item Course Work: HTML/CSS, QBasic
-\end{itemize}
-\end{itemize}
+\begin{minipage}[t]{0.2\textwidth}
+    \textbf{Machine Learning:}
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.73\textwidth}
+  \textbf{Numpy, Pandas}, Matplotlib, Keras, Sci-kit learn  
+\end{minipage}
+\vspace{4mm}
 
-\section*{Affiliations}
-\begin{itemize}
-    \item Chairperson of CodeChef-VIT
-    \item Core member of Ayuda-NGO
-\end{itemize}
+\begin{minipage}[t]{0.2\textwidth}
+    \textbf{WebDev:}
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.73\textwidth}
+  \textbf{Flask, Node, SQL}, PostreSQL, MongoDB
+\end{minipage}
+\vspace{4mm}
 
-\section*{Projects}
+\begin{minipage}[t]{0.2\textwidth}
+    \textbf{DevOps:}
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.73\textwidth}
+  \textbf{Git,GitHub}, Docker, Google Cloud Platform
+\end{minipage}
 
-\begin{itemize}
-\item 
-\subsection*{\large\textbf{Contacts Generator - Backend}}
-\begin{itemize}[label=\textasteriskcentered , leftmargin=*,topsep=0pt]
-    \item \textbf{\textit{Description:}} The Contact File Backend Service seamlessly uploads, processes CSV, XLSX, or XLS contact data, extracting details to compile a unified VCF file compatible with Android and iOS, simplifying cross-platform contact management.
-    \item \textbf{\textit{Tools Used:}} Python, Flask, V-Object, Pandas, Docker, Google Cloud Run
-    \item \textbf{\textit{GitHub Repo:} }\href{https://github.com/shivamgutgutia/contactsGeneratorBackend}{\textcolor{blue!80!white}{https://github.com/shivamgutgutia/contactsGeneratorBackend} {\faHandPointLeft}}
-\end{itemize}
-\end{itemize}
 
-\section*{Certifications}
-\begin{itemize}
-    \item Programming Foundations with JavaScript, HTML and CSS by Duke University - 
-    \href{https://coursera.org/verify/ZZVTGPTSR36H}{\textcolor{blue!80!white}{Verify here}} {\faHandPointLeft}
-\end{itemize}
+%----------------------------------------------------------------------------------------
+%	Projects
+%----------------------------------------------------------------------------------------
+\cvsect{Projects}
+\begin{entrylist}
+    \entry
+		{Web Dev}
+		{Contactify}
+		{\icon{Github}{11}{\href{https://github.com/shivamgutgutia/Contactify}{/shivamgutgutia/Contactify}}\\}
+		{The Contact File Backend Service seamlessly uploads, processes CSV, XLSX, XLS or ODS contact data,   extracting
+details to compile a unified VCF file compatible with Android and iOS, simplifying cross-platform contact management.\\
+        \textbf{Tech Used: } Python, Flask, vObject library, Pandas, Docker, GitHub Actions, Google Cloud Run
+        }
+
+    \entry
+		{Internet of Things}
+		{MQTT-Home Automation}
+		{\icon{Github}{11}{\href{https://github.com/shivamgutgutia/MQTT-HomeAutomation}{/shivamgutgutia/MQTT-HomeAutomation}}\\}
+		{The simulation demonstrates how you can control home appliances from your phone using a simple protocol called MQTT. It can further be improved by adding sensors that can automatically trigger certain actions.\\
+        \textbf{Tech Used: } Cisco Packet Tracer, MQTT, Python
+        }
+        
+\end{entrylist}
+
+%----------------------------------------------------------------------------------------
+%	EDUCATION
+%----------------------------------------------------------------------------------------
+\vspace{-10 pt}
+\cvsect{Education}
+\begin{entrylist}
+    \entry
+		{September 2021 - \\ Current}
+		{Btech in Computer Science and Engineering}
+		{Vellore Institute of Technology}
+		{\textbf{CGPA: }9.62\\
+        \textbf{Course Work: }Data Structures and Algorithms, Database Systems, Operating Systems, Computer Network, Computer
+Architecture and Organization
+  }
+    \entry
+		{May 2019 - \\ June 2020}
+		{Higher Education}
+		{Modern Senior Secondary School}
+		{\textbf{Percentage: }95.4\%}
+    \entry
+		{May 2017 - \\ June 2018}
+		{Secondary Education}
+		{Modern Senior Secondary School}
+		{\textbf{Percentage: }95.8\%}
+\end{entrylist}
+
+%----------------------------------------------------------------------------------------
+%	EXPERIENCE
+%----------------------------------------------------------------------------------------
+\vspace{-10 pt}
+\cvsect{Experience}
+\begin{entrylist}
+	\entry
+        {August 2023 - \\
+        December 2023}
+		{Analytics Intern}
+		{\href{https://www.cesltd.com/}{CES IT Pvt Ltd}}
+		{\vspace{-10pt}
+        \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
+            \item {Studied new technologies for Machine learning and Deep learning applications.}
+            \item {Designed, implemented, and evaluated prototypes solving problems in ML and systems engineering.}
+        \end{itemize} 
+        \texttt{Keras} \slashsep \texttt{Scikit-Learn} \slashsep \texttt{Numpy} \slashsep \texttt{Pandas} \slashsep \texttt{Matplotlib}}
+\end{entrylist}
+%----------------------------------------------------------------------------------------
+%	AFFILIATIONS
+%----------------------------------------------------------------------------------------
+\vspace{-10 pt}
+	\cvsect{Affiliations}
+    \vspace{-6pt}
+    
+    \hspace{26mm} Chairperson at \href{https://codechefvit.com/}{CodeChef-VIT} \hspace{20mm}Core Member at \href{https://ngoayuda.org/}{Ayuda NGO}
+
+%----------------------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------------------
+%	CERTIFICATIONS
+%----------------------------------------------------------------------------------------
+\vspace{5 pt}
+	\cvsect{Certifications}
+    \vspace{-6pt}
+    
+    \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=75pt]
+            \item Programming Foundations with JavaScript, HTML and CSS by Duke University - \href{https://coursera.org/verify/ZZVTGPTSR36H}{Verify certificate}
+    \end{itemize} 
+
+%----------------------------------------------------------------------------------------
 
 \end{document}
