Changed professionaly summary

--- a/resume.tex
+++ b/resume.tex
@@ -7,72 +7,72 @@
 \begin{document}
 
 %----------------------------------------------------------------------------------------
-%	TITLE AND CONTACT INFORMATION
+% TITLE AND CONTACT INFORMATION
 %----------------------------------------------------------------------------------------
 
-\begin{minipage}[t]{0.5\textwidth} 
-	\vspace{-\baselineskip}
-	
-	{ \fontsize{16}{20} \textcolor{black}{\textbf{\MakeUppercase{Shivam Gutgutia}}}}
-	
-	\vspace{6pt}
-	
-	{\Large Developer $\sim$ Computer Science Engineer}
+\begin{minipage}[t]{0.5\textwidth}
+  \vspace{-\baselineskip}
+
+  { \fontsize{16}{20} \textcolor{black}{\textbf{\MakeUppercase{Shivam Gutgutia}}}}
+
+  \vspace{6pt}
+
+  {\Large Developer $\sim$ Computer Science Engineer}
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.2\textwidth}
-	\vspace{-\baselineskip}
-	\icon{Globe}{11}{\href{https://shivamgutgutia.github.io/resume/}{Resume Link}}\\ 
-    \icon{Phone}{11}{7904860756}\\
-    \icon{MapMarker}{11}{Chennai, India}\\
-	
+  \vspace{-\baselineskip}
+  \icon{Globe}{11}{\href{https://shivamgutgutia.github.io/resume/}{Resume Link}}\\
+  \icon{Phone}{11}{7904860756}\\
+  \icon{MapMarker}{11}{Chennai, India}\\
+
 \end{minipage}
 \begin{minipage}[t]{0.27\textwidth}
-	\vspace{-\baselineskip}
-	
-	\icon{Envelope}{11}{\href{mailto:shivamgutgutia159@gmail.com}{shivamgutgutia159@gmail.com}}\\	
-    \icon{Github}{11}{\href{https://github.com/shivamgutgutia}{/shivamgutgutia}}\\
-    \icon{LinkedinSquare}{11}{\href{https://www.linkedin.com/in/shivamgutgutia/}{/in/shivamgutgutia}}\\    
-    
+  \vspace{-\baselineskip}
+
+  \icon{Envelope}{11}{\href{mailto:shivamgutgutia159@gmail.com}{shivamgutgutia159@gmail.com}}\\
+  \icon{Github}{11}{\href{https://github.com/shivamgutgutia}{/shivamgutgutia}}\\
+  \icon{LinkedinSquare}{11}{\href{https://www.linkedin.com/in/shivamgutgutia/}{/in/shivamgutgutia}}\\
+
 \end{minipage}
 
 
 %----------------------------------------------------------------------------------------
-%	SKILLS
+% SKILLS
 %----------------------------------------------------------------------------------------
 
 \cvsect{Summary}
 \vspace{-6pt}
 
 \hfill
-I'm currently a 3rd-year Computer Science student at Vellore Institute of Technology. I really enjoy working with Python and JavaScript, especially when it comes to Backend and machine learning. Being the Chairperson of CodeChef-VIT, I've learned a lot about working in teams and leading them.\\
+I am a 3rd-year Computer Science student at Vellore Institute of Technology with a CGPA of 9.62 out of 10, ranking among the top 20 in a cohort of 3000-4000 CS students. I have hands-on experience as an Analytics Intern at CES IT Pvt Ltd, where I worked on Machine Learning and Deep Learning projects using Python. I also have skills in backend programming using Flask and Node JS. I enjoy competitive programming and learning new technologies.\\
 
-I'm truly passionate about technology. I'm pretty good at Python, JavaScript, competitive programming, and DevOps. I'm always eager to learn more and improve myself, looking for chances to grow and make a positive impact in the tech field.
+As the Chairperson of CodeChef-VIT, I have shown leadership and teamwork skills by leading and collaborating with other programmers in various initiatives. I am seeking a software developer role that allows me to apply my passion and expertise in creating websites, applications, and backend solutions. I am eager to join a team-oriented environment where I can contribute to innovation and growth. environment where I can contribute to innovation and growth.
 
 
 \cvsect{Skills}
 \vspace{-6pt}
 
 \begin{minipage}[t]{0.2\textwidth}
-    \textbf{Languages:}
+  \textbf{Languages:}
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.73\textwidth}
-  \textbf{C/C++, Python}, Java, SQL, JavaScript  
+  \textbf{C/C++, Python}, Java, SQL, JavaScript
 \end{minipage}
 \vspace{4mm}
 
 \begin{minipage}[t]{0.2\textwidth}
-    \textbf{Machine Learning:}
+  \textbf{Machine Learning:}
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.73\textwidth}
-  \textbf{Numpy, Pandas}, Matplotlib, Keras, Sci-kit learn  
+  \textbf{Numpy, Pandas}, Matplotlib, Keras, Sci-kit learn
 \end{minipage}
 \vspace{4mm}
 
 \begin{minipage}[t]{0.2\textwidth}
-    \textbf{WebDev:}
+  \textbf{WebDev:}
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.73\textwidth}
@@ -81,7 +81,7 @@ I'm truly passionate about technology. I'm pretty good at Python, JavaScript, co
 \vspace{4mm}
 
 \begin{minipage}[t]{0.2\textwidth}
-    \textbf{DevOps:}
+  \textbf{DevOps:}
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.73\textwidth}
@@ -90,94 +90,94 @@ I'm truly passionate about technology. I'm pretty good at Python, JavaScript, co
 
 
 %----------------------------------------------------------------------------------------
-%	Projects
+% Projects
 %----------------------------------------------------------------------------------------
 \cvsect{Projects}
 \begin{entrylist}
-    \entry
-		{Web Dev}
-		{Contactify}
-		{\icon{Github}{11}{\href{https://github.com/shivamgutgutia/Contactify}{/shivamgutgutia/Contactify}}\\}
-		{The Contact File Backend Service seamlessly uploads, processes CSV, XLSX, XLS or ODS contact data,   extracting
-details to compile a unified VCF file compatible with Android and iOS, simplifying cross-platform contact management.\\
-        \textbf{Tech Used: } Python, Flask, vObject library, Pandas, Docker, GitHub Actions, Google Cloud Run
-        }
+  \entry
+  {Web Dev}
+  {Contactify}
+  {\icon{Github}{11}{\href{https://github.com/shivamgutgutia/Contactify}{/shivamgutgutia/Contactify}}\\}
+  {The Contact File Backend Service seamlessly uploads, processes CSV, XLSX, XLS or ODS contact data,   extracting
+    details to compile a unified VCF file compatible with Android and iOS, simplifying cross-platform contact management.\\
+    \textbf{Tech Used: } Python, Flask, vObject library, Pandas, Docker, GitHub Actions, Google Cloud Run
+  }
 
-    \entry
-		{Internet of Things}
-		{MQTT-Home Automation}
-		{\icon{Github}{11}{\href{https://github.com/shivamgutgutia/MQTT-HomeAutomation}{/shivamgutgutia/MQTT-HomeAutomation}}\\}
-		{The simulation demonstrates how you can control home appliances from your phone using a simple protocol called MQTT. It can further be improved by adding sensors that can automatically trigger certain actions.\\
-        \textbf{Tech Used: } Cisco Packet Tracer, MQTT, Python
-        }
-        
+  \entry
+  {Internet of Things}
+  {MQTT-Home Automation}
+  {\icon{Github}{11}{\href{https://github.com/shivamgutgutia/MQTT-HomeAutomation}{/shivamgutgutia/MQTT-HomeAutomation}}\\}
+  {The simulation demonstrates how you can control home appliances from your phone using a simple protocol called MQTT. It can further be improved by adding sensors that can automatically trigger certain actions.\\
+    \textbf{Tech Used: } Cisco Packet Tracer, MQTT, Python
+  }
+
 \end{entrylist}
 
 %----------------------------------------------------------------------------------------
-%	EDUCATION
+% EDUCATION
 %----------------------------------------------------------------------------------------
 \vspace{-10 pt}
 \cvsect{Education}
 \begin{entrylist}
-    \entry
-		{September 2021 - \\ Current}
-		{Btech in Computer Science and Engineering}
-		{Vellore Institute of Technology}
-		{\textbf{CGPA: }9.62\\
-        \textbf{Course Work: }Data Structures and Algorithms, Database Systems, Operating Systems, Computer Network, Computer
-Architecture and Organization
+  \entry
+  {September 2021 - \\ Current}
+  {Btech in Computer Science and Engineering}
+  {Vellore Institute of Technology}
+  {\textbf{CGPA: }9.62\\
+    \textbf{Course Work: }Data Structures and Algorithms, Database Systems, Operating Systems, Computer Network, Computer
+    Architecture and Organization
   }
-    \entry
-		{May 2019 - \\ June 2020}
-		{Higher Education}
-		{Modern Senior Secondary School}
-		{\textbf{Percentage: }95.4\%}
-    \entry
-		{May 2017 - \\ June 2018}
-		{Secondary Education}
-		{Modern Senior Secondary School}
-		{\textbf{Percentage: }95.8\%}
+  \entry
+  {May 2019 - \\ June 2020}
+  {Higher Education}
+  {Modern Senior Secondary School}
+  {\textbf{Percentage: }95.4\%}
+  \entry
+  {May 2017 - \\ June 2018}
+  {Secondary Education}
+  {Modern Senior Secondary School}
+  {\textbf{Percentage: }95.8\%}
 \end{entrylist}
 
 %----------------------------------------------------------------------------------------
-%	EXPERIENCE
+% EXPERIENCE
 %----------------------------------------------------------------------------------------
 \vspace{-10 pt}
 \cvsect{Experience}
 \begin{entrylist}
-	\entry
-        {August 2023 - \\
-        December 2023}
-		{Analytics Intern}
-		{\href{https://www.cesltd.com/}{CES IT Pvt Ltd}}
-		{\vspace{-10pt}
-        \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
-            \item {Studied new technologies for Machine learning and Deep learning applications.}
-            \item {Designed, implemented, and evaluated prototypes solving problems in ML and systems engineering.}
-        \end{itemize} 
-        \texttt{Keras} \slashsep \texttt{Scikit-Learn} \slashsep \texttt{Numpy} \slashsep \texttt{Pandas} \slashsep \texttt{Matplotlib}}
+  \entry
+  {August 2023 - \\
+    December 2023}
+  {Analytics Intern}
+  {\href{https://www.cesltd.com/}{CES IT Pvt Ltd}}
+  {\vspace{-10pt}
+    \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
+      \item {Studied new technologies for Machine learning and Deep learning applications.}
+      \item {Designed, implemented, and evaluated prototypes solving problems in ML and systems engineering.}
+    \end{itemize}
+    \texttt{Keras} \slashsep \texttt{Scikit-Learn} \slashsep \texttt{Numpy} \slashsep \texttt{Pandas} \slashsep \texttt{Matplotlib}}
 \end{entrylist}
 %----------------------------------------------------------------------------------------
-%	AFFILIATIONS
+% AFFILIATIONS
 %----------------------------------------------------------------------------------------
 \vspace{-10 pt}
-	\cvsect{Affiliations}
-    \vspace{-6pt}
-    
-    \hspace{26mm} Chairperson at \href{https://codechefvit.com/}{CodeChef-VIT} \hspace{20mm}Core Member at \href{https://ngoayuda.org/}{Ayuda NGO}
+\cvsect{Affiliations}
+\vspace{-6pt}
+
+\hspace{26mm} Chairperson at \href{https://codechefvit.com/}{CodeChef-VIT} \hspace{20mm}Core Member at \href{https://ngoayuda.org/}{Ayuda NGO}
 
 %----------------------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------------------
-%	CERTIFICATIONS
+% CERTIFICATIONS
 %----------------------------------------------------------------------------------------
-\vspace{5 pt}
-	\cvsect{Certifications}
-    \vspace{-6pt}
-    
-    \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=75pt]
-            \item Programming Foundations with JavaScript, HTML and CSS by Duke University - \href{https://coursera.org/verify/ZZVTGPTSR36H}{Verify certificate}
-    \end{itemize} 
+\vspace{0 pt}
+\cvsect{Certifications}
+\vspace{-6pt}
+
+\begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=75pt]
+  \item Programming Foundations with JavaScript, HTML and CSS by Duke University - \href{https://coursera.org/verify/ZZVTGPTSR36H}{Verify certificate}
+\end{itemize}
 
 %----------------------------------------------------------------------------------------
 
