--- a/resume.tex
+++ b/resume.tex
@@ -3,6 +3,11 @@
 \setlength{\columnsep}{0mm}
 \usepackage{lipsum}  
 
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue, % Set the color of the link
+    urlcolor=blue % Set the color of URLs
+}
 
 \begin{document}
 
@@ -164,7 +169,7 @@ As the Chairperson of CodeChef-VIT, I have shown leadership and teamwork skills 
 \cvsect{Affiliations}
 \vspace{-6pt}
 
-\hspace{26mm} Chairperson at \href{https://codechefvit.com/}{CodeChef-VIT} \hspace{20mm}Core Member at \href{https://ngoayuda.org/}{Ayuda NGO}
+\hspace{26mm} Chairperson at CodeChef-VIT \hspace{20mm}Core Member at Ayuda NGO -   
 
 %----------------------------------------------------------------------------------------
 
