Added porfolio link

--- a/resume.tex
+++ b/resume.tex
@@ -39,7 +39,7 @@
 \hfill
 \begin{minipage}[t]{0.2\textwidth}
   \vspace{-\baselineskip}
-  \icon{Globe}{11}{\href{https://shivamgutgutia.github.io/resume/}{Resume Link}}\\
+  \icon{Globe}{11}{\href{https://shivamgutgutia.github.io/portfolio/}{Portfolio Link}}\\
   \icon{Phone}{11}{7904860756}\\
   \icon{MapMarker}{11}{Chennai, India}\\
 
@@ -59,7 +59,6 @@
 \cvsect{Summary}
 \vspace{-10pt}
 
-\hfill
 I am a 3rd-year Computer Science student at Vellore Institute of Technology, ranking among the top 20 in a cohort of 3000-4000 CS students, with a CGPA of 9.62 out of 10. I have hands-on experience as an Analytics Intern at CES IT Pvt Ltd, where I worked on Machine Learning and Deep Learning projects using Python. My skills extend to backend programming using Flask and Node JS. Competitive programming and learning new technologies fuel my passion. \\
 
 As the Chairperson of CodeChef-VIT, I led and collaborated with other programmers in various initiatives, honing my leadership and teamwork skills. I seek a software developer role that allows me to apply my passion and expertise in creating websites, applications, and backend solutions. I am eager to join a team-oriented environment where I can contribute to innovation and growth.
@@ -100,7 +99,7 @@ As the Chairperson of CodeChef-VIT, I led and collaborated with other programmer
   \textbf{DevOps:}
 \end{minipage}
 \hfill
-\begin{minipage}[t]{0.73\textwidth}
+\begin{minipage}[t]{0.735\textwidth}
   \textbf{Git, GitHub}, Docker, Google Cloud Platform
 \end{minipage}
 
